# fastapi-starter-project

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6717d9a15f4a_initial.py  a7967d159f9d_auto_detect_changes.py  cfb7b5820469_auto_detect_changes.py
app/: cache.py  config.py  database.py  main.py
app/controllers/: __init__.py  base.py  category.py  comment.py  post.py  profile.py  role.py  user.py
app/exceptions/: __init__.py
app/models/: __init__.py  category.py  comment.py  post.py  profile.py  role.py  user.py
app/routers/: __init__.py  categories.py  comments.py  posts.py  profiles.py  relationships_demo.py  roles.py  users.py
app/schemas/: __init__.py  category.py  comment.py  post.py  profile.py  role.py  user.py
tests/: test_main.py
