[project]
name = "fastapi-starter-project"
version = "0.1.0"
description = "FastAPI starter project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioredis==2.0.1",
    "alembic==1.14.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==5.0.1",
    "bcrypt==4.2.1",
    "dnspython==2.7.0",  # For email validation
    "email-validator==2.2.0",
    "fastapi==0.115.8",
    "h11==0.14.0",  # Required by uvicorn
    "idna==3.10",
    "mako==1.3.9",  # Required by alembic
    "markupsafe==3.0.0",  # Required by mako
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "sniffio==1.3.1",  # Required by anyio
    "sqlalchemy==2.0.38",
    "starlette==0.45.3",  # Required by fastapi
    "typing-extensions==4.12.2",
    "uvicorn==0.34.0",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "pre-commit==4.2.0",
    "ruff==0.11.2",
]

[tool.pyright]
include = ["app", "scripts"]
extraPaths = ["app"]
exclude = [
    "**/__pycache__"
]
pythonVersion = "3.12"
reportAttributeAccessIssue = "warning"
reportOptionalMemberAccess = "warning"
venvPath = "."
venv = ".venv"


[tool.ruff]
cache-dir = "~/.cache/ruff/kxqualsaiassistant"
exclude = [".venv"]
line-length = 120
src = ["app", "test", "scripts"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "T201", # print
    "T203", # pprint
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = """
    --tb=short
    --asyncio-mode=auto
    --no-cov
"""
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
